更新项目名称为 LoginLab，修改相关文件路径和描述，优化 HTML 结构，增强可读性和一致性。

--- a/index.html
+++ b/index.html
@@ -9,15 +9,27 @@
     <title>LoginLab - AI驱动的登录页实验室 | 39种精美移动端登录页面模板</title>
 
     <!-- SEO Meta Tags -->
-    <meta name="description" content="LoginLab是AI驱动的登录页实验室，提供39种精美的移动端登录页面模板。包含霓虹赛博、极简商务、自然森林等多种风格，支持HTML5+CSS3+JavaScript，零框架依赖，开源免费下载。" />
-    <meta name="keywords" content="登录页面,移动端登录,AI登录页面,登录界面设计,精美登录页面模板,响应式登录界面,创意登录页设计,HTML5登录模板,CSS3登录页面,JavaScript登录组件,前端UI模板,登录表单设计" />
+    <meta
+      name="description"
+      content="LoginLab是AI驱动的登录页实验室，提供39种精美的移动端登录页面模板。包含霓虹赛博、极简商务、自然森林等多种风格，支持HTML5+CSS3+JavaScript，零框架依赖，开源免费下载。"
+    />
+    <meta
+      name="keywords"
+      content="登录页面,移动端登录,AI登录页面,登录界面设计,精美登录页面模板,响应式登录界面,创意登录页设计,HTML5登录模板,CSS3登录页面,JavaScript登录组件,前端UI模板,登录表单设计"
+    />
     <meta name="author" content="LoginLab Team" />
     <meta name="robots" content="index, follow" />
     <meta name="language" content="zh-CN" />
 
     <!-- Open Graph Meta Tags -->
-    <meta property="og:title" content="LoginLab - AI驱动的登录页实验室 | 39种精美移动端登录页面模板" />
-    <meta property="og:description" content="AI生成的39种精美登录页面模板，包含霓虹赛博、极简商务、自然森林等多种风格，支持移动端响应式设计，开源免费下载。" />
+    <meta
+      property="og:title"
+      content="LoginLab - AI驱动的登录页实验室 | 39种精美移动端登录页面模板"
+    />
+    <meta
+      property="og:description"
+      content="AI生成的39种精美登录页面模板，包含霓虹赛博、极简商务、自然森林等多种风格，支持移动端响应式设计，开源免费下载。"
+    />
     <meta property="og:type" content="website" />
     <meta property="og:url" content="https://loginlab.520ai.xin/" />
     <meta property="og:image" content="https://loginlab.520ai.xin/logo.png" />
@@ -27,7 +39,10 @@
     <!-- Twitter Card Meta Tags -->
     <meta name="twitter:card" content="summary_large_image" />
     <meta name="twitter:title" content="LoginLab - AI驱动的登录页实验室" />
-    <meta name="twitter:description" content="39种AI生成的精美登录页面模板，支持移动端响应式设计，开源免费下载。" />
+    <meta
+      name="twitter:description"
+      content="39种AI生成的精美登录页面模板，支持移动端响应式设计，开源免费下载。"
+    />
     <meta name="twitter:image" content="https://loginlab.520ai.xin/logo.png" />
 
     <!-- Canonical URL -->
@@ -45,40 +60,40 @@
 
     <!-- Structured Data (JSON-LD) -->
     <script type="application/ld+json">
-    {
-      "@context": "https://schema.org",
-      "@type": "WebApplication",
-      "name": "LoginLab",
-      "alternateName": "AI驱动的登录页实验室",
-      "description": "LoginLab是AI驱动的登录页实验室，提供39种精美的移动端登录页面模板，支持HTML5+CSS3+JavaScript，零框架依赖，开源免费下载。",
-      "url": "https://loginlab.520ai.xin/",
-      "applicationCategory": "DeveloperApplication",
-      "operatingSystem": "Web Browser",
-      "offers": {
-        "@type": "Offer",
-        "price": "0",
-        "priceCurrency": "CNY",
-        "availability": "https://schema.org/InStock"
-      },
-      "creator": {
-        "@type": "Organization",
-        "name": "LoginLab Team",
-        "url": "https://loginlab.520ai.xin/"
-      },
-      "datePublished": "2025-01-01",
-      "dateModified": "2025-01-01",
-      "inLanguage": "zh-CN",
-      "keywords": "登录页面,移动端登录,AI登录页面,登录界面设计,精美登录页面模板,响应式登录界面,创意登录页设计",
-      "screenshot": "https://loginlab.520ai.xin/screenshot.png",
-      "softwareVersion": "2.0",
-      "aggregateRating": {
-        "@type": "AggregateRating",
-        "ratingValue": "4.8",
-        "reviewCount": "156",
-        "bestRating": "5",
-        "worstRating": "1"
+      {
+        "@context": "https://schema.org",
+        "@type": "WebApplication",
+        "name": "LoginLab",
+        "alternateName": "AI驱动的登录页实验室",
+        "description": "LoginLab是AI驱动的登录页实验室，提供39种精美的移动端登录页面模板，支持HTML5+CSS3+JavaScript，零框架依赖，开源免费下载。",
+        "url": "https://loginlab.520ai.xin/",
+        "applicationCategory": "DeveloperApplication",
+        "operatingSystem": "Web Browser",
+        "offers": {
+          "@type": "Offer",
+          "price": "0",
+          "priceCurrency": "CNY",
+          "availability": "https://schema.org/InStock"
+        },
+        "creator": {
+          "@type": "Organization",
+          "name": "LoginLab Team",
+          "url": "https://loginlab.520ai.xin/"
+        },
+        "datePublished": "2025-01-01",
+        "dateModified": "2025-01-01",
+        "inLanguage": "zh-CN",
+        "keywords": "登录页面,移动端登录,AI登录页面,登录界面设计,精美登录页面模板,响应式登录界面,创意登录页设计",
+        "screenshot": "https://loginlab.520ai.xin/screenshot.png",
+        "softwareVersion": "2.0",
+        "aggregateRating": {
+          "@type": "AggregateRating",
+          "ratingValue": "4.8",
+          "reviewCount": "156",
+          "bestRating": "5",
+          "worstRating": "1"
+        }
       }
-    }
     </script>
   </head>
   <body>
@@ -94,7 +109,10 @@
       <nav class="topbar" role="navigation" aria-label="主导航">
         <a class="topbar__brand" href="#" aria-label="LoginLab首页">
           <span class="topbar__logo"
-            ><img class="topbar__logo-img" src="/logo.png" alt="LoginLab - AI驱动的登录页实验室标志"
+            ><img
+              class="topbar__logo-img"
+              src="/logo.png"
+              alt="LoginLab - AI驱动的登录页实验室标志"
           /></span>
         </a>
         <div class="topbar__actions">
@@ -113,7 +131,11 @@
       <!-- 面包屑导航 -->
       <nav aria-label="面包屑导航" class="breadcrumb">
         <ol itemscope itemtype="https://schema.org/BreadcrumbList">
-          <li itemprop="itemListElement" itemscope itemtype="https://schema.org/ListItem">
+          <li
+            itemprop="itemListElement"
+            itemscope
+            itemtype="https://schema.org/ListItem"
+          >
             <a itemprop="item" href="https://loginlab.520ai.xin/">
               <span itemprop="name">首页</span>
             </a>
@@ -127,7 +149,11 @@
         <div class="project-intro-card" id="projectIntro">
           <div class="intro-header">
             <div class="intro-icon">
-              <img class="logo-img" src="logo.png" alt="LoginLab - AI驱动的登录页实验室标志，展示39种精美移动端登录页面模板" />
+              <img
+                class="logo-img"
+                src="logo.png"
+                alt="LoginLab - AI驱动的登录页实验室标志，展示39种精美移动端登录页面模板"
+              />
             </div>
             <div class="intro-title">
               <h1 id="project-title">🎨 LoginLab - AI驱动的登录页实验室</h1>
@@ -167,7 +193,7 @@
               <span class="btn-text">了解项目详情</span>
             </a>
             <a
-              href="https://github.com/yuanyang749/beautiful-login"
+              href="https://github.com/yuanyang749/loginlab"
               target="_blank"
               class="intro-btn intro-btn--secondary"
             >
