更新样式卡片，添加新的“月夜神秘”和“戏剧舞台”风格，修改相关的预览背景和表单样式，优化特性描述，移除不必要的下载按钮部分。

--- a/index.html
+++ b/index.html
@@ -242,16 +242,19 @@
         </div>
 
         <!-- 深色极简风格 -->
-        <div class="style-card" data-style="dark-minimal">
-          <div class="card-preview dark-minimal-preview">
+        <div class="style-card" data-style="moonlit-mystery">
+          <div class="card-preview moonlit-mystery-preview">
             <div class="preview-bg">
-              <div class="grid-pattern"></div>
+              <div class="moon-mini">🌕</div>
+              <div class="mist-mini"></div>
+              <div class="rune-mini">◯</div>
+              <div class="particle-mini">✨</div>
             </div>
-            <div class="preview-form dark-form">
+            <div class="preview-form mystery-form">
               <div class="form-title">登录</div>
-              <div class="form-input neon-border"></div>
-              <div class="form-input neon-border"></div>
-              <div class="form-button neon-button"></div>
+              <div class="form-input"></div>
+              <div class="form-input"></div>
+              <div class="form-button"></div>
             </div>
           </div>
           <div class="card-info">
@@ -259,11 +262,12 @@
             <p>神秘月夜配合魔法符文和雾气</p>
             <ul class="features">
               <li>深紫渐变背景和月光效果</li>
+              <li>紫红霓虹色边框效果</li>
               <li>神秘符文和雾气动画</li>
               <li>适用：高端、艺术类应用</li>
             </ul>
-            <div class="card-actions">
-              <button class="download-btn" data-style="dark-minimal">
+            <!-- <div class="card-actions">
+              <button class="download-btn" data-style="moonlit-mystery">
                 <span class="download-icon">📦</span>
                 <span class="download-text">下载文件包</span>
                 <div class="download-progress">
@@ -271,19 +275,20 @@
                   <span class="progress-text">0%</span>
                 </div>
               </button>
-            </div>
+            </div> -->
           </div>
         </div>
 
-        <!-- 温馨粉色风格 -->
-        <div class="style-card" data-style="warm-pink">
-          <div class="card-preview warm-pink-preview">
+        <!-- 戏剧舞台 -->
+        <div class="style-card" data-style="theatrical-stage">
+          <div class="card-preview theatrical-stage-preview">
             <div class="preview-bg">
-              <div class="petal"></div>
-              <div class="petal"></div>
-              <div class="petal"></div>
+              <div class="curtain-mini">🎭</div>
+              <div class="spotlight-mini">💡</div>
+              <div class="stage-mini">🎪</div>
+              <div class="ornament-mini">🎨</div>
             </div>
-            <div class="preview-form pink-form">
+            <div class="preview-form theater-form">
               <div class="form-title">登录</div>
               <div class="form-input"></div>
               <div class="form-input"></div>
@@ -299,7 +304,7 @@
               <li>金色粒子和舞台烟雾</li>
               <li>适用：艺术、文化、娱乐类应用</li>
             </ul>
-            <div class="card-actions">
+            <!-- <div class="card-actions">
               <button class="download-btn" data-style="warm-pink">
                 <span class="download-icon">📦</span>
                 <span class="download-text">下载文件包</span>
@@ -308,7 +313,7 @@
                   <span class="progress-text">0%</span>
                 </div>
               </button>
-            </div>
+            </div> -->
           </div>
         </div>
 
@@ -335,7 +340,7 @@
               <li>几何图形装饰元素</li>
               <li>适用：企业、金融类应用</li>
             </ul>
-            <div class="card-actions">
+            <!-- <div class="card-actions">
               <button class="download-btn" data-style="business-professional">
                 <span class="download-icon">📦</span>
                 <span class="download-text">下载文件包</span>
@@ -344,7 +349,7 @@
                   <span class="progress-text">0%</span>
                 </div>
               </button>
-            </div>
+            </div> -->
           </div>
         </div>
 
@@ -372,7 +377,7 @@
               <li>水滴飘落效果</li>
               <li>适用：旅游、海洋类应用</li>
             </ul>
-            <div class="card-actions">
+            <!-- <div class="card-actions">
               <button class="download-btn" data-style="ocean-blue">
                 <span class="download-icon">📦</span>
                 <span class="download-text">下载文件包</span>
@@ -381,7 +386,7 @@
                   <span class="progress-text">0%</span>
                 </div>
               </button>
-            </div>
+            </div> -->
           </div>
         </div>
 
@@ -888,20 +893,17 @@
           </div>
         </div>
 
-        <!-- 月夜神秘风格 -->
-        <div class="style-card" data-style="moonlit-mystery">
-          <div class="card-preview moonlit-mystery-preview">
+        <!-- 深色极简风格 -->
+        <div class="style-card" data-style="dark-minimal">
+          <div class="card-preview dark-minimal-preview">
             <div class="preview-bg">
-              <div class="moon-mini">🌕</div>
-              <div class="mist-mini"></div>
-              <div class="rune-mini">◯</div>
-              <div class="particle-mini">✨</div>
+              <div class="grid-pattern"></div>
             </div>
-            <div class="preview-form mystery-form">
+            <div class="preview-form dark-form">
               <div class="form-title">登录</div>
-              <div class="form-input"></div>
-              <div class="form-input"></div>
-              <div class="form-button"></div>
+              <div class="form-input neon-border"></div>
+              <div class="form-input neon-border"></div>
+              <div class="form-button neon-button"></div>
             </div>
           </div>
           <div class="card-info">
@@ -1114,16 +1116,15 @@
           </div>
         </div>
 
-        <!-- 戏剧舞台风格 -->
-        <div class="style-card" data-style="theatrical-stage">
-          <div class="card-preview theatrical-stage-preview">
+        <!-- 温馨粉色风格 -->
+        <div class="style-card" data-style="warm-pink">
+          <div class="card-preview warm-pink-preview">
             <div class="preview-bg">
-              <div class="curtain-mini">🎭</div>
-              <div class="spotlight-mini">💡</div>
-              <div class="stage-mini">🎪</div>
-              <div class="ornament-mini">🎨</div>
+              <div class="petal"></div>
+              <div class="petal"></div>
+              <div class="petal"></div>
             </div>
-            <div class="preview-form theater-form">
+            <div class="preview-form pink-form">
               <div class="form-title">登录</div>
               <div class="form-input"></div>
               <div class="form-input"></div>
@@ -1222,7 +1223,7 @@
               <li>玻璃拟态设计风格</li>
               <li>适用：科技、创新类应用</li>
             </ul>
-            <div class="card-actions">
+            <!-- <div class="card-actions">
               <button class="download-btn" data-style="modern-gradient">
                 <span class="download-icon">📦</span>
                 <span class="download-text">下载文件包</span>
@@ -1231,7 +1232,7 @@
                   <span class="progress-text">0%</span>
                 </div>
               </button>
-            </div>
+            </div> -->
           </div>
         </div>
 
