更新项目描述为“LoginLab - AI驱动的登录页实验室”，修改相关文件中的版权信息和页面标题，优化代码中的字符串引号格式，确保一致性。

--- a/src/styles/threejs-scifi.html
+++ b/src/styles/threejs-scifi.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>3D 科幻登录 - Beautiful Login</title>
+    <title>3D 科幻登录 - LoginLab</title>
     <link rel="stylesheet" href="/src/assets/styles/threejs-scifi.css">
     <!-- Three.js CDN - 使用可用的 unpkg 源 -->
     <script src="https://unpkg.com/three@0.158.0/build/three.min.js"></script>
